
- Added a (hopefully) more readable changelog.
- I have removed the ability to show debug messages in the chat window and have replaced it with a new debug frame. /ia debug will show all of the debug messages and everything that IA has printed.
- Fix a small bug so that if you sell something for your exact cost you don't get a message that says you made a profit of 0c.

2010-07-06  Asa Ayers  <Asa.Ayers@Gmail.com>

- Changed QA to be an option part of /ia queue. If QA is there, IA will queue enough of an item to be created to have 1.25x QA auctino count x QA stack size (rounded up) items. If it is not there, it will create 1 on every profitable item. This commit also adds support for Auctioneer.

2010-07-04  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added options for the crafting threshold and auction threshold. I also fixed the queue to use the item cost to determine if there is enough profit instead of the auction (QA) threshold which already has profit built in.
- Expanded the queue system to calculate what the new QA threshold would be and to consider buying items from vendors. It also sets a threshold so that items with less than 5g profit will not be crafted. I will turn this into an option later.

2010-07-03  Asa Ayers  <Asa.Ayers@Gmail.com>

- Added the missing QuickAuctions module. I've also added integration with Skillet and LilSparkysWorkshop. IA and queue any item set up in QuickAuctions where the reagent cost is less than the current price of the item. This is based on KevTool Queue.
- Changed tooltip to be less confusing on the price per item.
- Cleaned up the messages. You can turn the notifications of price changes off and those messages will only show gold or silver if they are more than 0. I have also removed the dependency on AceConsole because it doesn't allow changing the color of the addon name when I print messages.
- Merged utils into ItemAuditor.
- updated the toc and .pkgmeta info

2010-07-02  Asa Ayers  <Asa.Ayers@Gmail.com>