@@ -1,7 +1,7 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.blizzard.com/wow/ui/
 	../UI.xsd">
 	
-	<Frame name="ItemAuditor_DebugFrame" toplevel="true" movable="false" parent="UIParent" enableMouse="true" resizable="false" frameStrata="MEDIUM"  hidden="true">
+	<Frame name="ItemAuditor_DebugFrame" toplevel="true" movable="true" parent="UIParent" enableMouse="true" resizable="false" frameStrata="MEDIUM"  hidden="true">
 		<Size x="640" y="512"/>
 		<Anchors>
 			<Anchor point="CENTER"/>
@@ -69,7 +69,7 @@
 			
 		</Layers>
 		<Frames>
-			<ScrollingMessageFrame name="$parentTxt" maxLines="100" fade="false" enableMouse="true">
+			<ScrollingMessageFrame name="$parentTxt" maxLines="999" fade="false" enableMouse="true">
 				<Anchors>
 					<Anchor point="TOPLEFT" relativePoint="TOPLEFT">
 						<Offset x="25" y="-45"/>
@@ -81,6 +81,21 @@
 				<FontString font="Interface\AddOns\WowLua\fonts\VeraMono.ttf" justifyH="LEFT">
 					<FontHeight val="14"/>
 				</FontString>
+				<Scripts>
+					<OnMouseWheel>
+						local direction;
+						if delta > 0 then
+							direction = "up";
+							self:ScrollUp()
+						else
+							direction = "down";
+							self:ScrollDown()
+						end
+						
+						-- WowLua:ScrollingMessageFrameScroll(self, direction, type);
+					</OnMouseWheel>
+					
+				</Scripts>
 			</ScrollingMessageFrame>
 			<Button name="ItemAuditorButton_Close" inherits="UIPanelCloseButton">
 				<Anchors>
@@ -94,7 +109,38 @@
 					</OnClick>
 				</Scripts>
 			</Button>
+			<Button name="$parentDragHeader">
+				<Size y="60"/>
+				<Anchors>
+					<Anchor point="TOPLEFT">
+						<Offset x="0" y="-13"/>
+					</Anchor>
+					<Anchor point="TOPRIGHT">
+						<Offset x="0" y="0"/>
+					</Anchor>
+				</Anchors>
+				<Layer level="BACKGROUND"> 
+					<Texture name="$parent_Background" setAllPoints="true">
+						<Color r="0" g="0" b="1" a="0.5" /> 
+					</Texture> 
+				</Layer>
+				<Scripts>
+					<OnMouseDown>
+						local parent = self:GetParent()
+						if parent:IsMovable() then
+						parent:StartMoving()
+						end
+					</OnMouseDown>
+					<OnMouseUp>
+						local parent = self:GetParent()
+						parent:StopMovingOrSizing()
+					</OnMouseUp>
+				</Scripts>
+			</Button>
 		</Frames>
+		<Scripts>
+		
+		</Scripts>
 	</Frame>
 	<Scripts>
 		ItemAuditor_DebugFrame:Hide()
